tests/core/error/cast-1.rq
SELECT ("asdf"^^xsd:boolean AS ?b) { }
